--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,12 @@ jspm_packages/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
