refactor: prepare project for Vercel serverless deployment, update .gitignore for Yarn PnP, and add deployment instructions

--- a/.gitignore
+++ b/.gitignore
@@ -94,9 +94,11 @@ Thumbs.db
 
 # Yarn
 .yarn/*
+!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+# Only keep .yarn/cache, patches, plugins, releases, sdks, and versions for Yarn PnP reproducibility
 .pnp.*
