--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,10 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/index.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/webhook",
-      "dest": "/dist/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/dist/index.js"
-    }
+    { "src": "/(.*)", "dest": "api/index.ts" }
   ],
   "env": {
     "NODE_ENV": "production"
