fix: build warning issue

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A GitHub code review app for automated code analysis and feedback",
   "main": "dist/index.js",
   "engines": {
-    "node": ">=22.0.0"
+    "node": "22.x"
   },
   "scripts": {
     "build": "tsc",
@@ -24,14 +24,14 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
+    "eslint": "^9.15.0",
     "prettier": "^3.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.15.0",
     "vitest": "^1.5.0"
   },
   "dependencies": {
