--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/js": "^9.15.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.4",
+    "@vercel/node": "^3.0.0",
     "eslint": "^9.15.0",
     "prettier": "^3.0.0",
     "ts-node": "^10.0.0",
