fix: eliminate Vercel deployment warnings and optimize build process
- Remove vercel.json to let Vercel auto-detect API configuration (eliminates builds warning)
- Fix .gitignore to properly exclude .yarn/cache/ directory (was causing 400+ file changes)
- Enhance .yarnrc.yml with explicit Yarn v4 configuration and build optimizations
- Add custom build.sh script with warning suppression for cleaner deployment logs
- Create .vercelignore to exclude unnecessary files from deployment
- Update package.json with vercel-build script for better deployment control

This resolves the 'builds existing in configuration' warning and ensures
consistent Yarn v4 usage during Vercel deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -92,13 +92,11 @@ jspm_packages/
 ehthumbs.db
 Thumbs.db
 
-# Yarn
+# Yarn PnP files
 .yarn/*
-!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-# Only keep .yarn/cache, patches, plugins, releases, sdks, and versions for Yarn PnP reproducibility
 .pnp.*
