fix: restore and correct vercel.json configuration for proper API deployment
- Restore vercel.json with correct Node.js API configuration
- Fix runtime specification to use @vercel/node@3 instead of invalid nodejS20.x
- Use rewrites instead of routes for better compatibility
- Remove problematic build.sh script that was causing yarn configuration errors
- Simplify vercel-build script to just use 'yarn build'

This resolves the 'No Output Directory named public' error by properly
configuring Vercel to treat this as a Node.js API instead of a static site.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "vitest run --coverage",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
-    "vercel-build": "./build.sh"
+    "vercel-build": "yarn build"
   },
   "keywords": [
     "github",
