Configure Vercel deployment and update Node.js runtime

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "functions": {
-    "api/index.ts": {
-      "runtime": "@vercel/node@3"
-    }
+    "api/**/*.ts": { "runtime": "nodejs22.x" }
   },
   "rewrites": [
     {
