fix: try builds configuration instead of functions to resolve runtime error
Based on Vercel community forum discussions, switching from 'functions' to 'builds'
configuration may resolve the 'Function Runtimes must have a valid version' error.

- Use version 2 explicitly
- Switch from functions to builds with @vercel/node
- Use routes instead of rewrites for v2 compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-  "functions": {
-    "api/**/*.ts": { "runtime": "nodejs22.x" }
-  },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index"
+    }
   ]
 } 
