--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "api/**/*.ts",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/api/index"
-    }
+    { "src": "/(.*)", "dest": "/api/index.js" }
   ]
 } 
