Adjust vercel.json routes dest for serverless function

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "outputDirectory": "dist",
   "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/(.*)", "dest": "/api/index" }
   ]
 } 
