--- a/env.example
+++ b/env.example
@@ -1,15 +1,21 @@
-# Example environment file for Code Critics
-# Copy this file to `.env` and replace the placeholder values with your secrets
+# Environment variables template for Code Critics
+# Copy this file to .env and fill in your actual values
 
-# GitHub Personal Access Token with appropriate repository scopes
-GITHUB_TOKEN=your_personal_access_token_here
-
-# Shared secret configured on the GitHub webhook
+# GitHub Configuration (Required)
+GITHUB_TOKEN=your_github_personal_access_token_here
 WEBHOOK_SECRET=your_webhook_secret_here
 
-# AI provider API keys
+# AI Service Configuration (At least one required)
 GEMINI_API_KEY=your_gemini_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
-# Local development server port (optional)
-PORT=3000 
+# Application Configuration (Optional)
+AI_PROVIDER=gemini
+MAX_DIFF_SIZE=100000
+LOG_LEVEL=info
+PORT=3000
+
+# Security Configuration (Optional)
+# Comma-separated list of allowed repositories (owner/repo format)
+# Leave empty to allow all repositories
+ALLOWED_REPOSITORIES=your-username/your-repo,your-username/another-repo 
