--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.15.0",
+    "vercel": "^44.2.7",
     "vitest": "^1.5.0"
   },
   "dependencies": {
