--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "test": "vitest run --coverage",
     "lint": "eslint src/**/*.ts",
     "format": "prettier --write src/**/*.ts",
@@ -31,6 +31,7 @@
     "eslint": "^9.15.0",
     "prettier": "^3.0.0",
     "ts-node": "^10.0.0",
+    "tsx": "^4.20.3",
     "typescript": "5.8.3",
     "typescript-eslint": "^8.15.0",
     "vercel": "^44.2.7",
@@ -43,7 +44,9 @@
     "@vercel/node": "^5.3.0",
     "axios": "^1.6.0",
     "dotenv": "^16.0.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "packageManager": "yarn@4.9.2"
 }
