feat: Complete Phase 4 - Architecture, Docs & DI

--- a/package.json
+++ b/package.json
@@ -53,8 +53,16 @@
   "vitest": {
     "coverage": {
       "provider": "v8",
-      "reporter": ["text", "json", "html"],
-      "exclude": ["**/node_modules/**", "**/dist/**", "**/tests/**"]
+      "reporter": [
+        "text",
+        "json",
+        "html"
+      ],
+      "exclude": [
+        "**/node_modules/**",
+        "**/dist/**",
+        "**/tests/**"
+      ]
     }
   }
 }
